--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>TOP: Tic Tac Toe</title>
   </head>
   <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>TOP: Tic Tac Toe</h1>
     <div class="board">
       <div class="cell"></div>
       <div class="cell"></div>
@@ -18,6 +19,10 @@
       <div class="cell"></div>
       <div class="cell"></div>
     </div>
-    <script src="script.js"></script>
+    <div class="result">
+      <p class="message"></p>
+      <button class="restart">Restart</button>
+    </div>
+    <script src="/scritp.js"></script>
   </body>
 </html>
